--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <header>            
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#especialidades">Serviços</a></li>
-                <li><a href="#tratamento">Exames</a></li>
+                <li><a href="#servico">Serviços</a></li>
+                <li><a href="#exames">Exames</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>        
     </header>
@@ -69,7 +69,7 @@
                 </div>
             
         </div>
-      <div class="p1">
+      <div id="servico" class="p1">
                 <h1>
                     Serviços
                 </h1>
@@ -276,7 +276,7 @@
                 </div>
          </div>
 
-        <div class="p2">
+        <div  id="exames" class="p2">
             <h1>
                 Exames
             </h1>
@@ -337,7 +337,7 @@
                 </div>
             </div>
         </div>
-        <div class="p4">
+        <div id="contato" class="p4">
             <div class="logo">
                 <img src="logo.png" alt="">
             </div>
