--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </h1>
                 <div class="p1-box">
                     <div class="p-item">
-                       <img src="registo-medico.png" alt="">
+                       <img src="images/cradio.jpeg" alt="">
                         <h3>
                             Cardiologia
                        </h3>
@@ -84,7 +84,7 @@
                         </form>
                     </div>
                     <div class="p-item"> 
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/clinico geral.jpeg" alt="">
                         <h3>
                             Clínuco Geral
                        </h3>
@@ -124,7 +124,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/gastro.jpeg" alt="">
                         <h3>
                             Gastrologia
                        </h3>
@@ -134,7 +134,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/gineco.jpeg" alt="">
                         <h3>
                            Ginecologia
                        </h3>
@@ -144,7 +144,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/neurolgia.jpeg" alt="">
                         <h3>
                             Neurologia
                        </h3>
@@ -154,7 +154,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/nutricao.jpeg" alt="">
                         <h3>
                             Nutricionista
                        </h3>
@@ -174,7 +174,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/otorrino.jpeg" alt="">
                         <h3>
                             Otorrino
                        </h3>
@@ -184,7 +184,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/orto.jpeg" alt="">
                         <h3>
                             Ortopedista
                        </h3>
@@ -204,7 +204,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/proctologia.jpeg" alt="">
                         <h3>
                             Proctologista
                        </h3>
@@ -224,7 +224,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/psico.jpeg" alt="">
                         <h3>
                            Psicológico
                        </h3>
@@ -234,7 +234,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/psiquiatria.jpeg" alt="">
                         <h3>
                             Psiquiatra
                        </h3>
@@ -254,7 +254,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/vascular.jpeg" alt="">
                         <h3>
                             Vascular
                        </h3>
@@ -264,7 +264,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/reumatologia.jpeg" alt="">
                         <h3>
                             Reumatologista
                        </h3>
