--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/dermatologia.jpg" alt="">
                         <h3>
                              Dermatologia                       
                         </h3>
@@ -104,7 +104,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/endoctinologia.jpg" alt="">
                         <h3>
                             Endocrinologia
                        </h3>
@@ -114,7 +114,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/fisioterapia.jpg" alt="">
                         <h3>
                             Fisioterapia
                        </h3>
@@ -164,7 +164,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/oftalmologista-para-criancas.jpg" alt="">
                         <h3>
                             Oftamologista
                        </h3>
@@ -194,7 +194,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/nova-puericultura-pediatria.jpg" alt="">
                         <h3>
                             Pediatra
                        </h3>
@@ -214,7 +214,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/patologia-6.png" alt="">
                         <h3>
                             Pneumologista
                        </h3>
@@ -244,7 +244,7 @@
                         </form>
                     </div>
                     <div class="p-item">
-                        <img src="registo-medico.png" alt="">
+                        <img src="images/urologista.jpg" alt="">
                         <h3>
                             Urologista
                        </h3>
@@ -282,7 +282,7 @@
             </h1>
             <div class="p2-box">
                 <div class="p2-item">
-                    <img src="relatorio-medico.png" alt="">
+                    <img src="images/exames-cardio.jpeg" alt="">
                     <h3>Cardiológicos</h3>
                                             <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
 
@@ -290,7 +290,7 @@
                     </form>
                 </div>
                 <div class="p2-item">
-                    <img src="relatorio-medico.png" alt="">
+                    <img src="images/exames-labo.jpeg" alt="">
                     <h3>Laboratorais</h3>
                                             <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
 
@@ -298,7 +298,7 @@
                     </form>
                 </div>
                 <div class="p2-item">
-                    <img src="relatorio-medico.png" alt="">
+                    <img src="images/medicina-do-trabalho.jpeg" alt="">
                     <h3>Medicina do Trabalho</h3>
                                             <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
 
@@ -306,7 +306,7 @@
                     </form>
                 </div>
                 <div class="p2-item">
-                    <img src="relatorio-medico.png" alt="">
+                    <img src="images/exames-neuro.jpeg" alt="">
                     <h3>Neurológicos</h3>
                                             <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
 
