--- a/index.html
+++ b/index.html
@@ -79,16 +79,18 @@
                         <h3>
                             Cardiologia
                        </h3>
-                        <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                        <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item"> 
                         <img src="images/clinico geral.jpeg" alt="">
                         <h3>
-                            Clínuco Geral
+                            Clínico Geral
                        </h3>
-                           <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                           <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!"></form>
 
                             <button class="transf"> Agendar Consulta</button>
                         </form>
@@ -98,180 +100,198 @@
                         <h3>
                              Dermatologia                       
                         </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                            <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/endoctinologia.jpg" alt="">
                         <h3>
                             Endocrinologia
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/fisioterapia.jpg" alt="">
                         <h3>
                             Fisioterapia
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/gastro.jpeg" alt="">
                         <h3>
                             Gastrologia
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/gineco.jpeg" alt="">
                         <h3>
                            Ginecologia
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/neurolgia.jpeg" alt="">
                         <h3>
                             Neurologia
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/nutricao.jpeg" alt="">
                         <h3>
                             Nutricionista
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/oftalmologista-para-criancas.jpg" alt="">
                         <h3>
                             Oftamologista
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/otorrino.jpeg" alt="">
                         <h3>
                             Otorrino
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/orto.jpeg" alt="">
                         <h3>
                             Ortopedista
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/nova-puericultura-pediatria.jpg" alt="">
                         <h3>
                             Pediatra
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/proctologia.jpeg" alt="">
                         <h3>
                             Proctologista
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/patologia-6.png" alt="">
                         <h3>
                             Pneumologista
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/psico.jpeg" alt="">
                         <h3>
                            Psicológico
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/psiquiatria.jpeg" alt="">
                         <h3>
                             Psiquiatra
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/urologista.jpg" alt="">
                         <h3>
                             Urologista
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/vascular.jpeg" alt="">
                         <h3>
                             Vascular
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                     <div class="p-item">
                         <img src="images/reumatologia.jpeg" alt="">
                         <h3>
                             Reumatologista
                        </h3>
-                                                <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                            <button class="transf"> Agendar Consulta</button>
-                        </form>
+                                                   <div class="button-1">
+                            <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                                Agendar Consulta
+                            </a>
+                        </div>
                     </div>
                 </div>
          </div>
@@ -284,37 +304,51 @@
                 <div class="p2-item">
                     <img src="images/exames-cardio.jpeg" alt="">
                     <h3>Cardiológicos</h3>
-                                            <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                        <button class="transf"> Agendar Consulta</button>
-                    </form>
+                    <div class="button-1">
+                        <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                            Agendar Consulta
+                        </a>
+                    </div>
                 </div>
                 <div class="p2-item">
                     <img src="images/exames-labo.jpeg" alt="">
                     <h3>Laboratorais</h3>
-                                            <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                        <button class="transf"> Agendar Consulta</button>
-                    </form>
+                    <div class="button-1">
+                        <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                            Agendar Consulta
+                        </a>
+                    </div>
                 </div>
                 <div class="p2-item">
                     <img src="images/medicina-do-trabalho.jpeg" alt="">
                     <h3>Medicina do Trabalho</h3>
-                                            <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                        <button class="transf"> Agendar Consulta</button>
-                    </form>
+                    <div class="button-1">
+                        <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                            Agendar Consulta
+                        </a>
+                    </div>
                 </div>
                 <div class="p2-item">
                     <img src="images/exames-neuro.jpeg" alt="">
                     <h3>Neurológicos</h3>
-                                            <form action="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
-
-                        <button class="transf"> Agendar Consulta</button>
-                    </form>
+                    <div class="button-1">
+                        <a href="https://api.whatsapp.com/send?phone=5543999180210&text=Gostaria%20de%20agendar%20uma%20consulta!">
+                            Agendar Consulta
+                        </a>
+                    </div>
                 </div>
             </div>
 
+        </div>
+        <div class="p5">
+            <div class="p5-box">
+                <h1>Conheça Nossos Especialistas</h1>
+                <div class="button">
+                    <a href="especialistas.html">
+                        Ver Mais
+                    </a>
+                </div>
+            </div>
         </div>
         <div class="p3">
             <h1>Vantagens</h1>
