--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ adequados e tratar doenças que não necessitam de intervenções cirúrgicas.
                              Dermatologia                       
                         </h3>
                         <p>
-                            EEspecialista responsável pelo diagnóstico, tratamento e prevenção de doenças
+                            Especialista responsável pelo diagnóstico, tratamento e prevenção de doenças
                             da pele, pelos, cabelos e unhas. Assim como tratar de doenças nas mucosas,
                             como afecções na boca, lábios, gengiva, língua e também na área genital,
                             como no caso das doenças sexualmente transmissíveis (dst) ou doenças
@@ -586,6 +586,18 @@ com respeito e agilidade, tudo para sua maior comodidade.
                   <div class="slideshow-7">
                       <img src="l4.jpeg" alt="">
                   </div>
+                  <div class="slideshow-7">
+                    <img src="l5.jpeg" alt="">
+                </div>
+                <div class="slideshow-7">
+                <img src="l6.jpeg" alt="">
+                 </div> 
+                <div class="slideshow-7">
+                    <img src="l7.jpeg" alt="">
+                </div>
+                <div class="slideshow-7">
+                    <img src="l8.jpeg" alt="">
+                </div>
               </div>
           </div>
 
