--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#servico">Serviços</a></li>
                 <li><a href="#exames">Exames</a></li>
+                <li><a href="#parceiros">Parceiros</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>        
     </header>
@@ -265,7 +266,7 @@ adequados e tratar doenças que não necessitam de intervenções cirúrgicas.
                     <div class="p-item">
                         <img src="images/orto.jpeg" alt="">
                         <h3>
-                            Ortopedista
+                            Clínica Médica 
                        </h3>
                        <p>
                         É a especialidade médica responsável para tratar, corrigir enfermidades, lesões
@@ -490,16 +491,7 @@ funcionais.
             </div>
 
         </div>
-        <div class="p5">
-            <div class="p5-box">
-                <h1>Conheça Nossos Especialistas</h1>
-                <div class="button">
-                    <a href="especialistas.html">
-                        Ver Mais
-                    </a>
-                </div>
-            </div>
-        </div>
+
         <div class="sobre">
             <div class="sobrebx">
                 <div class="sobre-item">
@@ -569,7 +561,7 @@ com respeito e agilidade, tudo para sua maior comodidade.
                 </div>
             </div>
         </div>
-        <div class="p7">
+        <div class="p7" id="parceiros">
             <h1>
                 Convênios
             </h1>
