--- a/index.html
+++ b/index.html
@@ -47,6 +47,29 @@
             </div>
             </div>
         </div>
+        <div class="sobre">
+            <div class="sobrebx">
+                <div class="sobre-item">
+                    <h1>
+                        VOCÊ CONHECE A ATEND JÁ CAMBÉ?
+                    </h1>
+                    <P>
+                        Somos uma franquia de clinica medica, especializada em consultas e exames
+médicos, com atendimento de <b>qualidade acessível</b> para todos sem
+mensalidades.
+                    </P>
+                    <p>
+                        Oferecemos atendimento em mais de <b>18 especialidades,</b> dando acesso a
+serviços médicos, exames laboratoriais e de imagem, com profissionais
+capacitados, consultórios próprios e climatizados, atendimento humanizado
+com respeito e agilidade, tudo para sua maior comodidade.
+                    </p>
+                </div>
+                <div class="sobre-item">
+                    <img src="3.jpeg" alt="">
+                </div>
+            </div>
+        </div>
       <div id="servico" class="p1">
                 <h1>
                     ESPECIALIDADES
@@ -492,29 +515,7 @@ funcionais.
 
         </div>
 
-        <div class="sobre">
-            <div class="sobrebx">
-                <div class="sobre-item">
-                    <h1>
-                        VOCÊ CONHECE A ATEND JÁ CAMBÉ?
-                    </h1>
-                    <P>
-                        Somos uma franquia de clinica medica, especializada em consultas e exames
-médicos, com atendimento de <b>qualidade acessível</b> para todos sem
-mensalidades.
-                    </P>
-                    <p>
-                        Oferecemos atendimento em mais de <b>18 especialidades,</b> dando acesso a
-serviços médicos, exames laboratoriais e de imagem, com profissionais
-capacitados, consultórios próprios e climatizados, atendimento humanizado
-com respeito e agilidade, tudo para sua maior comodidade.
-                    </p>
-                </div>
-                <div class="sobre-item">
-                    <img src="3.jpeg" alt="">
-                </div>
-            </div>
-        </div>
+      
         <div class="p7">
             <h1>
               DEPOIMENTOS
@@ -639,7 +640,7 @@ com respeito e agilidade, tudo para sua maior comodidade.
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous"></script>
     <script type="text/javascript">
     $('.slider').slick({
-  arrows:true,
+  arrows:false,
     dots: true,
   infinite: true,
   speed: 300,
@@ -653,14 +654,16 @@ com respeito e agilidade, tudo para sua maior comodidade.
         slidesToShow: 1,
         slidesToScroll: 3,
         infinite: true,
-        dots: false
+        dots: false,
+        arrows:false
       }
     },
     {
       breakpoint: 600,
       settings: {
         slidesToShow: 1,
-        slidesToScroll: 2
+        slidesToScroll: 2,
+        arrows:false
       }
     },
     {
@@ -693,7 +696,8 @@ com respeito e agilidade, tudo para sua maior comodidade.
             slidesToShow: 1,
             slidesToScroll: 3,
             infinite: true,
-            dots: false
+            dots: false,
+            arrows:false
           }
         },
         {
@@ -733,21 +737,24 @@ com respeito e agilidade, tudo para sua maior comodidade.
             slidesToShow: 1,
             slidesToScroll: 3,
             infinite: true,
-            dots: false
+            dots: false,
+            arrows:false
           }
         },
         {
           breakpoint: 600,
           settings: {
             slidesToShow: 1,
-            slidesToScroll: 2
+            slidesToScroll: 2,
+            arrows:false
           }
         },
         {
           breakpoint: 480,
           settings: {
             slidesToShow: 1,
-            slidesToScroll: 1
+            slidesToScroll: 1,
+            arrows:false
           }
         }
     
